# Smart-Lock-using-ESP32-S3-have-mobile-app

./: LICENSE  README.md
Hardware/Gerber_Smart-Lock-ver2/: Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_MechanicalLayer.GME  Gerber_TopLayer.GTL  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
lib/: main.dart
lib/config/: app_constants.dart  app_theme.dart  ble_constants.dart
lib/data/models/: access_log.dart  device_model.dart  user_profile.dart
lib/data/services/: auth_service.dart  bluetooth_service.dart  device_service.dart
lib/presentation/screens/auth/: login_screen.dart  register_screen.dart  splash_screen.dart
lib/presentation/screens/device/: access_log_screen.dart  log_analysis_screen.dart  setup_wifi_screen.dart
lib/presentation/screens/home/: add_device_screen.dart  home_screen.dart  user_management_screen.dart
lib/presentation/screens/settings/: change_password_screen.dart  edit_profile_screen.dart  profile_screen.dart
main/: CMakeLists.txt  ble_server.c  camera_config.h  camera_init.c  camera_init.h  face_detect.cpp  face_detect.h  global_state.h  http_server.cpp  http_server.h  idf_component.yml  lock_ctrl.c  lock_ctrl.h  main.c  supabase_client.c  supabase_client.h  wifi_config.h  wifi_manager.c  wifi_manager.h
